# personalization

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: action.yml  pre-commit.yml  test.yml
notebooks/: register_kernel.sh  train.ipynb
personalization/: __init__.py  __main__.py  abstract_pipeline.py  file_utils.py  ranking_pipeline.py
src/personalization/: __main__.py  file_utils.py  ranking_pipeline.py
tests/: test_base_ml_pipeline.py  test_init.py  test_more.py  test_ranking_pipeline.py  utils.py
